# standard_morph

./: .gitignore  README.md  project.toml  pyproject.toml  setup.py
.cirleci/: config.yml
standard_morph/: Standardizer.py  __init__.py  tools.py
tests/: test_axon_origination.py  test_cycles.py  test_for_orphaned_nodes.py  test_horta_swc.swc  test_load_swc.py  test_soma_and_soma_children.py  test_validation.py
