[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "standard_morph"
dynamic = ["version"] 
description = "Standardizing morphologies"
readme = "README.md"
authors = [{ name = "Matthew Mallory", email = "matt.mallory@alleninstitute.org" }]
license = { text = "MIT" }
dependencies = [
    "pandas",
]

[tool.setuptools_scm]
version_file = "standard_morph/__init__.py"

[tool.setuptools.packages.find]
where = ["."]  

[project.optional-dependencies]
SomaMip = ["imageio", "s3fs", "zarr", "scikit-image"] 

[tool.setuptools.package-data]
"standard_morph" = ["*"]

[project.urls]
Homepage = "https://github.com/AllenInstitute/standard_morph"

[tool.pytest.ini_options]
addopts = "--strict-markers"
testpaths = ["tests"]