[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "standard_morph"
version = "0.1.0"
description = "Standardizing morphologies"
readme = "README.md"
authors = [{ name = "Matthew Mallory", email = "matt.mallory@alleninstitute.org" }]
license = { text = "MIT" }
dependencies = [
    "pandas",
]

[tool.setuptools.packages.find]
where = ["."]  

[project.optional-dependencies]
SomaMip = ["imageio", "s3fs", "zarr", "scikit-image"] 

[tool.setuptools.package-data]
"standard_morph" = ["*"]

[project.urls]
Homepage = "https://github.com/AllenInstitute/standard_morph"

[tool.pytest.ini_options]
addopts = "--strict-markers"
testpaths = ["tests"]